# cw-tail

./: .gitignore  README.md  cw_tail.py  example.env  install.sh  pyproject.toml
cw_tail/: __init__.py  config.example.yml  cw_tail.py  formatters.py  utils.py
