[project]
name = "cw-tail"
version = "0.2.1"
description = "Tail AWS CloudWatch logs with a colored, simplified layout."
authors = [
    { name = "Yoni Knoll", email = "yoni@makegov.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.25",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "tomli>=2.0.1"
]

[project.scripts]
cw-tail = "cw_tail:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
